Input Cropping issue fixed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -574,7 +574,7 @@ body {
   font-family: "Gotham Rounded";
   font-style: italic;
   color: #fff;
-  letter-spacing: 1px;
+  letter-spacing: 1.9px;
 }
 .participate .form input::-webkit-input-placeholder {
   color: #fff;
